@@ -1254,20 +1254,20 @@ ldns_rr_compare(const ldns_rr *rr1, const ldns_rr *rr2)
         }
 
         /* convert RRs into canonical wire format */
-		rr1_buf = ldns_buffer_new(rr1_len);
-		rr2_buf = ldns_buffer_new(rr2_len);
-        min_len = (rr1_len < rr2_len) ? rr1_len : rr2_len;
+	rr1_buf = ldns_buffer_new(rr1_len);
+	rr2_buf = ldns_buffer_new(rr2_len);
+	min_len = (rr1_len < rr2_len) ? rr1_len : rr2_len;
 
-		if (ldns_rr2buffer_wire(rr1_buf, rr1, LDNS_SECTION_ANY) != LDNS_STATUS_OK) {
-			ldns_buffer_free(rr1_buf);
-			ldns_buffer_free(rr2_buf);
-			return 0; 
-		}
-		if (ldns_rr2buffer_wire(rr2_buf, rr2, LDNS_SECTION_ANY) != LDNS_STATUS_OK) {
-			ldns_buffer_free(rr1_buf);
-			ldns_buffer_free(rr2_buf);
-			return 0;
-		}
+	if (ldns_rr2buffer_wire(rr1_buf, rr1, LDNS_SECTION_ANY) != LDNS_STATUS_OK) {
+		ldns_buffer_free(rr1_buf);
+		ldns_buffer_free(rr2_buf);
+		return 0; 
+	}
+	if (ldns_rr2buffer_wire(rr2_buf, rr2, LDNS_SECTION_ANY) != LDNS_STATUS_OK) {
+		ldns_buffer_free(rr1_buf);
+		ldns_buffer_free(rr2_buf);
+		return 0;
+	}
 
         /* Compare RRs RDATA byte for byte. */
         for(i = offset; i < min_len; i++) {
